# PDF-Manager

./: .gitignore  README.md  build.bat  build.spec  build_dir.bat  clean.bat  pdf_manager.spec  requirements.txt
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-03-13-pdf-manager.md  2026-03-14-ocr-check-and-packaging-fix.md  2026-03-17-rust-tauri-refactor.md
docs/superpowers/specs/: 2026-03-13-pdf-manager-design.md  (+2 more)
pdf-manager-tauri/: index.html  package.json  tsconfig.json  vite.config.ts
pdf-manager-tauri/src/: App.svelte  app.css  vite-env.d.ts
pdf-manager-tauri/src-tauri/: Cargo.toml  tauri.conf.json
pdf-manager-tauri/src-tauri/src/: lib.rs  main.rs
pdf-manager-tauri/src-tauri/src/commands/: folder.rs  mod.rs  ocr.rs  pdf.rs  search.rs
pdf-manager-tauri/src-tauri/src/db/: mod.rs  schema.rs  tests.rs
pdf-manager-tauri/src-tauri/src/models/: folder.rs  mod.rs  page.rs  pdf.rs
pdf-manager-tauri/src-tauri/src/services/: folder_service.rs  mod.rs  ocr_service.rs  pdf_service.rs  search_service.rs
src/: __init__.py  main.py
src/core/: __init__.py  folder_manager.py  pdf_manager.py  search_service.py
src/models/: __init__.py  database.py  schemas.py
src/services/: __init__.py  index_service.py  ocr_service.py  pdf_service.py
src/ui/: __init__.py  main_window.py
src/utils/: __init__.py  config.py  logger.py  path_utils.py
tests/: test_config.py  test_database.py  test_folder_manager.py  test_index_service.py  test_logger.py  test_ocr_service.py  test_pdf_manager.py  test_pdf_service.py  test_schemas.py  test_search_service.py
(+16 files in other folders)
